Added signal level autosave and archive files Tweaked debug levels for diag msgs
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/modules/ip330/current@10702 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/ip330App/Db/Makefile
+++ b/ip330App/Db/Makefile
@@ -15,8 +15,9 @@ DB += IP330BSA.template
 DB += IP330.db
 
 #----------------------------------------------------
-# If <anyname>.db template is not named <anyname>*.template add
-# <anyname>_TEMPLATE = <templatename>
+REQ += ip330-signal.tpl-req
+
+ARCHIVE += ip330-signal.tpl-arch
 
 include $(TOP)/configure/RULES
 #----------------------------------------
