Fixed bug that was causing board to interrupt at 15khz Changed drvIP330.c to drvIP330.cpp so I could use the ContextTimer class to debug. Updated to latest ipac w/ 64 bit void * ISR param
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/trunk/pcds/epics/modules/ip330/current@14678 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/ip330App/Db/Makefile
+++ b/ip330App/Db/Makefile
@@ -12,7 +12,7 @@ include $(TOP)/configure/CONFIG
 # databases, templates, substitutions like this
 DB += IP330.template
 DB += IP330BSA.template
-DB += IP330.db
+DB += IP330.substitutions
 DB += IP330BSA_TSE.template
 
 #----------------------------------------------------
