Prepare for release ip330-R2-2-5: Add autosaveFields Add autosaveFields

--- a/ip330App/Db/IP330BSA.template
+++ b/ip330App/Db/IP330BSA.template
@@ -22,6 +22,7 @@ record(ai, "$(RECNAME)") {
   field(LSV,  "MINOR")
   field(LLSV, "MAJOR")
   field(FLNK, "$(FLNK)")
+  info(autosaveFields, "HIHI HIGH LOW LOLO") 
 }
 
 
