Add code to deal with triggered input using the timesync module.
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/trunk/pcds/epics/modules/ip330/current@18957 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/ip330App/Db/Makefile
+++ b/ip330App/Db/Makefile
@@ -14,6 +14,7 @@ DB += IP330.template
 DB += IP330BSA.template
 DB += IP330.substitutions
 DB += IP330BSA_TSE.template
+DB += IP330delay.db
 
 #----------------------------------------------------
 REQ += ip330-signal.tpl-req
