--- a/ip330App/Db/IP330.template
+++ b/ip330App/Db/IP330.template
@@ -22,6 +22,7 @@ record(ai, "$(RECORDNAME)")
   field(HSV,  "MINOR")
   field(LSV,  "MINOR")
   field(LLSV, "MAJOR")
+  field(TSE,  "$(TSE)")
 }
 
 
