--- a/ip330App/src/Makefile
+++ b/ip330App/src/Makefile
@@ -4,6 +4,7 @@ include $(TOP)/configure/CONFIG
 #----------------------------------------
 #  ADD MACRO DEFINITIONS AFTER THIS LINE
 #=============================
+USR_CFLAGS += -DUSE_TYPED_RSET -DUSE_TYPED_DSET -DUSE_TYPED_DRVET
 
 #=============================
 # build an ioc application
